# postprocessing_variant_calls

./: .dockerignore  .gitignore  .gitmodules  CLI.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SUMMARY.md  VARDICT.MD  cli.md  conda-lock.yml  docs.md  docs_main.md  environment.yml  example_calls.sh  header.txt  maf.md  meta.yaml  out_file.md  pyproject.toml  readme-1.md  requirements-dev.txt  requirements.txt  setup.cfg  vardict.md
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql.yml  document_package.yml  lint.yml  publish-image.yml  publish_conda.yml  publish_docker.yml  push-main.yml  push-master.yml  pytest_pv.yml  python-publish.yml  test-post-processing-pr.yml  test-post-processing-push.yml  test-post-processing.yml  test_vardict.txt  test_vardict.yml
command-description-and-explanation/: README.md  maf.md  vardict.md
conda/: conda_build_config.yaml  meta.yaml
configs/: main.ini
data/: method_process.py
data/tests/: Myeloid200-1.vcf
docs/: CLI.md  MAF.md  README.md  VARDICT.MD  cli.md
docs/source/: conf.py  content.rst  index.rst
postprocessing_variant_calls/: main.py
postprocessing_variant_calls/annotate/: annotate_class.py  annotate_helpers.py  annotate_process.py  pybed_intersect.py
postprocessing_variant_calls/concat/: concat_helpers.py  concat_process.py
postprocessing_variant_calls/maf/: concat_helpers.py  (+6 more)
src/: postprocessing_variant_calls.py  pv.py
tests/: example_calls.sh  test_maf.py  test_mutect.py  test_vardict.py  vardict_process.py
utils/: pybed_intersect.py
(+38 files in other folders)
