[tool.poetry]
name = "pv"
version = "0.1.0"
description = ""
authors = ["Ronak Shaw <shahr2@mskcc.org>", "Karthigayini Sivaprakasam <sivaprk@mskcc.org>", "Eric Buehler <buehlere@mskcc.org>"]

[tool.poetry.dependencies]
python = "3.6.6"
fastapi = "^0.65"
pydantic = { extras = ["dotenv"], version = "^1.8" }
python-json-logger = "^0.1"
typer = {extras = ["all"], version = "^0.4.0"} # "^0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9"
mypy = "^0"
poetry = "1.0"
pytest = "^6.2"

[tool.poetry.scripts]
pv = "pv:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
