[tool.poetry]
name = "pv"
version = "0.1.2"
description = ""
authors = ["Ronak Shah <shahr2@mskcc.org>", "Karthigayini Sivaprakasam <sivaprk@mskcc.org>", "Eric Buehler <buehlere@mskcc.org>"]

[tool.poetry.dependencies]
python = "3.9.7"
pydantic = { extras = ["dotenv"], version = "^1.8" }
typer = {extras = ["all"], version = "^0.4.0"} # "^0.3"
pip = "^22.0.4"
PyVCF3 = "^*"

[tool.poetry.dev-dependencies]
flake8 = "^3.9"
poetry = "1.2.0b1"
pytest = "^6.2"

[tool.poetry.scripts]
pv = "pv:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
